--- a/27.vowel or not.ipynb
+++ b/27.vowel or not.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter a charecter:R\n",
-      "R is consonant.\n"
+      "enter a charecter:H\n",
+      "H is not vowel.\n"
      ]
     }
    ],
