--- a/67.list of 4 digit no's ,.ipynb
+++ b/67.list of 4 digit no's ,.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "enter 4 digit lower range:1234\n",
-      "enter 4 digit lower range:9000\n",
+      "enter 4 digit upper range:9000\n",
       "list: [4624, 6084, 6400, 8464]\n"
      ]
     }
