Update 67.list of 4 digit no's ,.ipynb

--- a/67.list of 4 digit no's ,.ipynb
+++ b/67.list of 4 digit no's ,.ipynb
@@ -19,7 +19,7 @@
     "#67.list of 4 digit no's ,\n",
     "import math\n",
     "n1=int(input(\"enter 4 digit lower range:\"))\n",
-    "n2=int(input(\"enter 4 digit lower range:\"))\n",
+    "n2=int(input(\"enter 4 digit upper range:\"))\n",
     "l=[]\n",
     "x=0\n",
     "for i in range(n1,n2):\n",
